--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   	      <div class="carousel-inner" role="listbox">
   	        <div class="carousel-item active"> <img class="d-block mx-auto" src="images/Carousel_Placeholder.png" alt="First slide">
   	          <div class="carousel-caption">
-  	            <h5>First slide Heading</h5>
+  	            <h5>test</h5>
   	            <p>First slide Caption</p>
               </div>
             </div>
@@ -51,7 +51,7 @@
             </div>
   	        <div class="carousel-item"> <img class="d-block mx-auto" src="images/Carousel_Placeholder.png" alt="Third slide">
   	          <div class="carousel-caption">
-  	            <h5>Third slide Heading</h5>
+  	            <h5>ds</h5>
   	            <p>Third slide Caption</p>
               </div>
             </div>
