--- a/index.html
+++ b/index.html
@@ -8,30 +8,32 @@
     <!-- Bootstrap -->
 	<link href="css/bootstrap-4.4.1.css" rel="stylesheet">
 	<link href="style.css" rel="stylesheet" type="text/css">
-  </head>
+  <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/iceberg:n4:default;abril-fatface:n4,i4:default;alfa-slab-one:n4:default.js" type="text/javascript"></script>
+</head>
   <body>
   	<div class="container-fluid">
+  	  <nav class="navbar navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="#">Agregator
+		  </a>
+  	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span></button>
+  	    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+  	      <ul class="navbar-nav mr-auto">
+  	        <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a></li>
+  	        <li class="nav-item"> <a class="nav-link" href="#">Link</a></li>
+  	        <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown </a>
+  	          <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a>
+  	            <div class="dropdown-divider"></div>
+  	            <a class="dropdown-item" href="#">Something else here</a></div>
+            </li>
+          </ul>
+  	      <form class="form-inline my-2 my-lg-0">
+  	        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+  	        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
   	  <div class="container">
-  	    <nav class="navbar navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="#">Navbar</a>
-  	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-  	      <div class="collapse navbar-collapse" id="navbarSupportedContent1">
-  	        <ul class="navbar-nav mr-auto">
-  	          <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
-  	          <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
-  	          <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown </a>
-  	            <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a>
-  	              <div class="dropdown-divider"></div>
-  	              <a class="dropdown-item" href="#">Something else here</a> </div>
-              </li>
-            </ul>
-  	        <form class="form-inline my-2 my-lg-0">
-  	          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-  	          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-          </div>
-        </nav>
-  	    <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel" style="background-color: grey">
-  	      <ol class="carousel-indicators">
+<div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel" style="background-color: grey">
+      <ol class="carousel-indicators">
   	        <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
   	        <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
   	        <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
@@ -77,8 +79,8 @@
   	      </div>
         </div>
 	  </div>
-  	</div>
-  	<!-- body code goes here -->
+  </div>
+  <!-- body code goes here -->
 
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
