--- a/index.html
+++ b/index.html
@@ -12,23 +12,20 @@
 </head>
   <body>
   	<div class="container-fluid">
-  	  <nav class="navbar navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="#">Agregator
+  	  <nav class="navbar navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="#">agregator
 		  </a>
   	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span></button>
   	    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
   	      <ul class="navbar-nav mr-auto">
-  	        <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a></li>
-  	        <li class="nav-item"> <a class="nav-link" href="#">Link</a></li>
-  	        <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Dropdown </a>
-  	          <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a>
-  	            <div class="dropdown-divider"></div>
-  	            <a class="dropdown-item" href="#">Something else here</a></div>
-            </li>
+  	        <li class="nav-item active"> <a class="nav-link" href="#">мужчинам <span class="sr-only">(current)</span></a></li>
+  	        <li class="nav-item"> <a class="nav-link" href="#">женщинам</a></li>
           </ul>
-  	      <form class="form-inline my-2 my-lg-0">
-  	        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-  	        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+		  <div class="form-search">
+			  <form class="form-inline my-2 my-lg-0">
+				<input class="input-form mr-sm-2" type="search" placeholder="search" aria-label="search">
+				<button class="seacrh-btn btn-outline-success my-2 my-sm-0" type="submit">search</button>
+			  </form>
+		  </div>
         </div>
       </nav>
   	  <div class="container">
@@ -37,7 +34,7 @@
   	        <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
   	        <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
   	        <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
-          </ol>
+      </ol>
   	      <div class="carousel-inner" role="listbox">
   	        <div class="carousel-item active"> <img class="d-block mx-auto" src="images/Carousel_Placeholder.png" alt="First slide">
   	          <div class="carousel-caption">
