--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           </ul>
 		  <div class="form-search">
 			  <form class="form-inline my-2 my-lg-0">
-				<input class="input-form mr-sm-2" type="search" placeholder="search" aria-label="search">
-				<button class="seacrh-btn btn-outline-success my-2 my-sm-0" type="submit">search</button>
+				<input class="input-form mr-sm-2" type="search" placeholder="что ищем?" aria-label="search">
+				<button class="seacrh-btn btn-outline-success my-2 my-sm-0" type="submit">поехали!</button>
 			  </form>
 		  </div>
         </div>
