--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   	    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
   	      <ul class="navbar-nav mr-auto">
   	        <li class="nav-item active"> <a class="nav-link" href="#">мужчинам <span class="sr-only">(current)</span></a></li>
-  	        <li class="nav-item"> <a class="nav-link" href="#">женщинам</a></li>
+  	        <li class="nav-item active"> <a class="nav-link" href="#">женщинам</a></li>
           </ul>
 		  <div class="form-search">
 			  <form class="form-inline my-2 my-lg-0">
-				<input class="input-form mr-sm-2" type="search" placeholder="что ищем?" aria-label="search">
+				<input class="input-form" type="search" placeholder="что ищем?" aria-label="search">
 				<button class="seacrh-btn btn-outline-success my-2 my-sm-0" type="submit">поехали!</button>
 			  </form>
 		  </div>
