--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/iceberg:n4:default;abril-fatface:n4,i4:default;alfa-slab-one:n4:default.js" type="text/javascript"></script>
 </head>
   <body>
-  	<div class="container-fluid">
-  	  <nav class="navbar navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="#">agregator
+<div class="container-fluid">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="#">agregator
 		  </a>
   	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span></button>
   	    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
@@ -76,15 +76,21 @@
   	      </div>
         </div>
 	  </div>
+</div>
+  	<div class="site-footer">
+  	  <ul>
+  	    <li><a href="https://github.com/Dmitryq/Agregator">GitHub</a></li>
+  	    <li><a href="https://google.com">Feeling lucky?</a></li>
+      </ul>
   </div>
   <!-- body code goes here -->
 
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-	<script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/jquery-3.4.1.min.js"></script>
 
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="js/popper.min.js"></script> 
   <script src="js/bootstrap-4.4.1.js"></script>
-  </body>
+</body>
 </html>
